--- a/SVMlinear.ipynb
+++ b/SVMlinear.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNET28+eBMfNXMM7TfZP3mG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,9 +75,13 @@
         "      y=labels[i]\n",
         "      x=samples[i]\n",
         "      if y*(np.dot(weights,x))<1:\n",
-        "        weights=weights -lr*(lamda*weights-y*x)\n",
+        "        gradient=lamda*weights\n",
+        "        gradient[0]=0\n",
+        "        weights=weights -lr*(gradient-y*x)\n",
         "      else:\n",
-        "        weights=weights-lr*lamda*weights\n",
+        "        gradient=lamda*weights\n",
+        "        gradient[0]=0\n",
+        "        weights=weights-lr*gradient\n",
         "  return weights\n",
         "\n",
         "\n",
@@ -107,7 +110,7 @@
         "id": "Dd-zrWZ6JVRr",
         "outputId": "ced345ef-3daf-4053-b6ef-874fb4dd9b29"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +142,7 @@
       "metadata": {
         "id": "defn5Y25Xhli"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +162,7 @@
         "id": "88TLjyqzjM80",
         "outputId": "3526ed83-e1f1-4dea-993e-6d706bfc4c25"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +187,7 @@
         "id": "KuHxtJKRW955",
         "outputId": "df1b6e5c-0956-4a01-e22f-5305229875f8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
